styles/Squadpagecss.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  /*for the back of the animated boxes, do not edit!*/
}
@font-face {
  font-family: "Nighty";
  src: url('../assets/Nightydemo.otf');
  src: url('../assets/Nightydemo.otf') format('embedded-opentype');
}
body {
  font-family: "Nighty",'Segoe UI',Tahoma, Geneva, Verdana, sans-serif;
  background-color: #d1dcfc ;
  color: #F9F5E3;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  background-image: url(https://img.freepik.com/free-vector/beautiful-mountain-landscape-early-pink-morning_107791-8498.jpg?w=900&t=st=1707697480~exp=1707698080~hmac=cd2768359d99e919428750a6541b5e4e2c25c7e690d2fa0f38cc9ed261ee2a43);
  /* Idk if this image will continue to work because it is not a local file??? lol */
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
}

.container {
  display: flex;
  flex-direction: column;
  text-align: center;
  background: rgba(216,140,154, 0.6);
  padding: 40px;
  border-radius: 10px;
  width: 90%;
  height: 90%;
  max-width: 1200px;
}

.namen {
  font-size: 30px; 
  color: #841D4C;
  margin-top: 20px;
  margin-bottom: 10px;
}

.title {
  font-size: 100px;
  margin-bottom: 20px;
  font-weight: 600;
  color: #841D4C;
}

.description {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
  font-size: 18px;
  margin-top: 20px;
  margin-bottom: 40px;
  color: #ffffff;
}

.grid {
  display: flex;
  /* Display flex werkt goed maar ik wil scrollen */
  justify-content: space-between;
  gap: 20px;
  margin-top: 20px;
}
  
.grid-item {
  width: 250px;
  grid-template-columns:repeat( auto-fit, minmax(16em, 1fr));
}

.flip-card { 
  background-color: transparent;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
  font-size: 18px;
  width: 250px;
  height: 200px;
  perspective: 1000px;
}

.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.6s;
  transform-style: preserve-3d;
}

.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front, .flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;
  border-radius: 10px;
}

.flip-card-front {
  background-color: #99C1B9;
}

.flip-card-front img {
  width: 100%;
  height: 100%;
  border-radius: 10px;
  object-fit: cover;
}

.flip-card-back {
  background-color: #99C1B9;
  color: #F9F5E3;
  transform: rotateY(180deg);
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 20px;
  border-radius: 10px;
}

.flip-card-back h3 {
  margin-bottom: 10px;
}

.flip-card-back p {
  font-size: 14px;
  color: #841D4C;
}


img {
  border-radius: 60em;
  box-shadow: 0 0 2px 2px rgba(0,0,0,.2);
}

